# e-net

./: README.md  docker-compose.yml  pyproject.toml
e_net/: manage.py
e_net/e_net/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
e_net/network/: admin.py  models.py  permissions.py  serializers.py  tasks.py  views.py
e_net/network/fixtures/: all_data.json
